# brand_post_agent

./: README.md  docker-compose.yml
backend/: .env.example  .gitignore  README.md  dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: brands.py  documents.py  posts.py
backend/app/core/: config.py  logging.py
backend/app/outputs/10f49b6e-4e0d-47ed-b3de-ddd82298cdbb/: render.html
backend/app/outputs/4d989e87-ff24-4597-9fd2-5e48c264df88/: render.html
backend/app/outputs/83735498-9f5d-4840-8a9f-8cbd0779cb12/: render.html
backend/app/outputs/9d6f2f45-a400-4dcb-b62f-748e41b746e2/: render.html
backend/app/outputs/acef556d-1639-4574-9be5-f2a1a14d2a5d/: render.html
backend/app/outputs/cba5822a-9861-4220-8d6c-dc0c13d0bb35/: render.html
backend/app/outputs/d7833d92-fafd-48b2-9619-34293b456b02/: render.html
backend/app/prompts/: caption_prompt.txt  image_prompt.txt  judge_prompt.txt
backend/app/services/: brand_service.py  document_service.py  evaluation_service.py  generation_service.py  image_service.py  ingestion_service.py  rag_service.py  render_service.py  storage_service.py
backend/app/templates/: post_template.html
backend/app/vector/: hybrid_ingestor.py  hybrid_searcher.py  qdrant_manager.py
backend/app/workers/: jobs.py  worker.py
backend/storage/brands/7d0887ab-6fd0-46c7-a41c-ab662b0ac771/: brand.json
frontend/: Dockerfile
frontend/src/: App.jsx
