[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "fastembed>=0.7.4",
    "numpy>=2.4.3",
    "openai>=2.26.0",
    "pandas>=3.0.1",
    "pathlib>=1.0.1",
    "playwright>=1.58.0",
    "pydantic-settings>=2.13.1",
    "pymupdf>=1.27.2",
    "python-multipart>=0.0.22",
    "qdrant-client[fastembed]>=1.17.0",
    "redis>=7.3.0",
    "replicate>=1.0.7",
    "requests>=2.32.5",
    "rq>=2.7.0",
    "sentence-transformers>=5.2.3",
    "tenacity>=9.1.4",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.3",
    "uvicorn>=0.41.0",
]
